--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.8.1",
     "jquery": "^1.12.4",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
